Add in know your body link on home

--- a/app/views/application/index.html.erb
+++ b/app/views/application/index.html.erb
@@ -65,6 +65,13 @@
     </div>
 
     <%= link_to 'Buy Physiotherapy Products Online', 'http://www.phoenix-healthcare.co.uk/', :target => 'blank', :class => 'buy-products-online' %>
+    <%= link_to body_parts_path, :class => "know-your-body home" do %>
+      <%= image_tag "know-your-body.jpg" %>
+      <div class="tagline">
+        Know Your Body
+      </div>
+    <% end %>
+
   </div>
 
   <div class="clear"></div>
