--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,8 +2,8 @@
 
 /* Main */
 body {
-	@include zero;
-	text-align: center;
+  @include zero;
+  text-align: center;
   font-size: 1em;
   font-family: Arial, Helvetica, sans-serif;
   color: #666;
@@ -14,10 +14,10 @@ body.internal {
 }
 
 .main_container {
-	text-align: left;
-	margin-left: auto;
-	margin-right: auto;
-	width: 980px;
+  text-align: left;
+  margin-left: auto;
+  margin-right: auto;
+  width: 980px;
 }
 
 .top-extra {
@@ -30,12 +30,12 @@ body.internal {
 }
 
 img {
-	@include zero;
+  @include zero;
 }
 
 a {
-	overflow: hidden;
-	outline: none;
+  overflow: hidden;
+  outline: none;
   color: #176881;
 
   &:hover {
@@ -48,36 +48,36 @@ em, .italic {
 }
 
 .clear {
-	clear: both;
+  clear: both;
   height: 0px;
   overflow: hidden;
 }
 
 /* Forms */
 form {
-	@include zero;
+  @include zero;
 }
 
 form p, .field {
-	margin: 0px 0px 15px 0px;
-	padding: 0px;
+  margin: 0px 0px 15px 0px;
+  padding: 0px;
 }
 
 form label {
-	color: #333333;
-	font-size: 12px;
-	line-height: 17px;
+  color: #333333;
+  font-size: 12px;
+  line-height: 17px;
 }
 
 form input, form textarea, form select {
-	font-family: $main_font;
-	font-size: 12px;
-	line-height: 17px;
-	color: #333333;
-	padding: 4px;
-	border: 1px solid #e1dcd2;
-	background-color: #FFFFFF;
-	//width: 280px;
+  font-family: $main_font;
+  font-size: 12px;
+  line-height: 17px;
+  color: #333333;
+  padding: 4px;
+  border: 1px solid #e1dcd2;
+  background-color: #FFFFFF;
+  //width: 280px;
   -webkit-border-radius: 4px;
   -moz-border-radius: 4px;
   border-radius: 4px;
@@ -93,92 +93,92 @@ input.medium {width: 150px;}
 input.large {width: 400px;}
 
 form select {
-	width: auto;
+  width: auto;
 }
 
 form textarea {
-	width: 280px;
-	height: 150px;
+  width: 280px;
+  height: 150px;
 }
 
 form input.check_box, form input.checkbox, form input.radio_button {
-	color: #333333;
-	background-color: transparent;
-	border: 0px;
-	width: 14px;
+  color: #333333;
+  background-color: transparent;
+  border: 0px;
+  width: 14px;
 }
 
 .actions input {
-	width: auto;
-	color: #747474;
-	background-color: #e1dcd2;
-	border: 0px;
-	padding: 0px 8px 0px 8px;
-	font-size: 16px;
-	font-family: $main_font;
-	font-weight: normal;
-	cursor: pointer;
+  width: auto;
+  color: #747474;
+  background-color: #e1dcd2;
+  border: 0px;
+  padding: 0px 8px 0px 8px;
+  font-size: 16px;
+  font-family: $main_font;
+  font-weight: normal;
+  cursor: pointer;
   background-image: none;
 }
 
 .actions input:hover {
-	background-color: #f0ebe6 ;
+  background-color: #f0ebe6 ;
 }
 
 .field_with_errors {
-	display: inline;
+  display: inline;
 }
 
 /* Tables */
 table, tr, td {
-	font-family: $main_font;
-	font-size: 12px;
-	border: 1px solid #333333;
+  font-family: $main_font;
+  font-size: 12px;
+  border: 1px solid #333333;
 }
 
 table {
-	border-collapse: collapse;
-	margin: 10px 0px 10px 0px;
+  border-collapse: collapse;
+  margin: 10px 0px 10px 0px;
 }
 
 td, th {
-	text-align: left;
-	padding: 8px;
+  text-align: left;
+  padding: 8px;
 }
 
 td {
-	vertical-align: top;
+  vertical-align: top;
 }
 
 
 /* Flash Notices */
 #flash_notice {
-	background-color: #f2fcf2;
-	border: solid 1px #009966;
+  background-color: #f2fcf2;
+  border: solid 1px #009966;
   color: #009966;
-	padding: 5px 8px;
+  padding: 5px 8px;
   margin: 10px 0px;
 }
 
 #flash_alert {
   background-color: #FFC2C2;
-	border: solid 1px #990000;
+  border: solid 1px #990000;
   color: #990000;
-	padding: 5px 8px;
+  padding: 5px 8px;
   margin: 10px 0px;
 }
 
 #error_explanation, .error-messages {
-	padding: 5px 8px;
+  padding: 5px 8px;
   margin: 10px 0px;
-	ul {
-	background-color: #FFC2C2;
+  ul {
+  background-color: #FFC2C2;
   border: solid 1px #990000;
   color: #990000;
-	margin: 0px;
-	padding: 10px 10px 10px 40px;
-	}
-	h2 {@include zero; font-size: 14px; font-weight: bold; color: #990000;}
+  margin: 0px;
+  padding: 10px 10px 10px 40px;
+  }
+  h2 {@include zero; font-size: 14px; font-weight: bold; color: #990000;}
 }
 
 /* Begin */
@@ -319,34 +319,75 @@ p .green-button, p .blue-button {
 }
 
 .buy-products-online {
-	background: #74af2f;
-	background: -moz-linear-gradient(top,  #74af2f 2%, #5f911e 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,#74af2f), color-stop(100%,#5f911e));
-	background: -webkit-linear-gradient(top,  #74af2f 2%,#5f911e 100%);
-	background: -o-linear-gradient(top,  #74af2f 2%,#5f911e 100%);
-	background: -ms-linear-gradient(top,  #74af2f 2%,#5f911e 100%);
-	background: linear-gradient(to bottom,  #74af2f 2%,#5f911e 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#74af2f', endColorstr='#5f911e',GradientType=0 );
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
-	padding: 20px;
-	color: #fff;
-	font-size: 18px;
-	display: block;
-	margin: 0 auto;
-	text-align: center;
-	text-decoration: none;
-	width: 43%;
+  background: #74af2f;
+  background: -moz-linear-gradient(top,  #74af2f 2%, #5f911e 100%);
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,#74af2f), color-stop(100%,#5f911e));
+  background: -webkit-linear-gradient(top,  #74af2f 2%,#5f911e 100%);
+  background: -o-linear-gradient(top,  #74af2f 2%,#5f911e 100%);
+  background: -ms-linear-gradient(top,  #74af2f 2%,#5f911e 100%);
+  background: linear-gradient(to bottom,  #74af2f 2%,#5f911e 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#74af2f', endColorstr='#5f911e',GradientType=0 );
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  border-radius: 10px;
+  padding: 20px;
+  color: #fff;
+  font-size: 18px;
+  display: block;
+  margin: 0 auto;
+  text-align: center;
+  text-decoration: none;
+  width: 43%;
 
-	&:hover {
-		background: #5f911e;
-		background: -moz-linear-gradient(top,  #5f911e 0%, #74af2f 98%);
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5f911e), color-stop(98%,#74af2f));
-		background: -webkit-linear-gradient(top,  #5f911e 0%,#74af2f 98%);
-		background: -o-linear-gradient(top,  #5f911e 0%,#74af2f 98%);
-		background: -ms-linear-gradient(top,  #5f911e 0%,#74af2f 98%);
-		background: linear-gradient(to bottom,  #5f911e 0%,#74af2f 98%);
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5f911e', endColorstr='#74af2f',GradientType=0 );
-	}
+  &:hover {
+    background: #5f911e;
+    background: -moz-linear-gradient(top,  #5f911e 0%, #74af2f 98%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5f911e), color-stop(98%,#74af2f));
+    background: -webkit-linear-gradient(top,  #5f911e 0%,#74af2f 98%);
+    background: -o-linear-gradient(top,  #5f911e 0%,#74af2f 98%);
+    background: -ms-linear-gradient(top,  #5f911e 0%,#74af2f 98%);
+    background: linear-gradient(to bottom,  #5f911e 0%,#74af2f 98%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5f911e', endColorstr='#74af2f',GradientType=0 );
+  }
+}
+
+a.know-your-body.home {
+  display: block;
+  width: 168px;
+  margin: 20px auto;
+  text-align: center;
+  text-decoration: none;
+  color: #ffffff;
+
+  img {
+    display: block;
+  }
+
+  .tagline {
+    -webkit-border-bottom-right-radius: 10px;
+    -webkit-border-bottom-left-radius: 10px;
+    -moz-border-radius-bottomright: 10px;
+    -moz-border-radius-bottomleft: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+
+    background: #74af2f;
+    background: -moz-linear-gradient(top,  #74af2f 2%, #5f911e 100%);
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(2%,#74af2f), color-stop(100%,#5f911e));
+    background: -webkit-linear-gradient(top,  #74af2f 2%,#5f911e 100%);
+    background: -o-linear-gradient(top,  #74af2f 2%,#5f911e 100%);
+    background: -ms-linear-gradient(top,  #74af2f 2%,#5f911e 100%);
+    background: linear-gradient(to bottom,  #74af2f 2%,#5f911e 100%);
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#74af2f', endColorstr='#5f911e',GradientType=0 );
+    &:hover {
+      background: #5f911e;
+      background: -moz-linear-gradient(top,  #5f911e 0%, #74af2f 98%);
+      background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#5f911e), color-stop(98%,#74af2f));
+      background: -webkit-linear-gradient(top,  #5f911e 0%,#74af2f 98%);
+      background: -o-linear-gradient(top,  #5f911e 0%,#74af2f 98%);
+      background: -ms-linear-gradient(top,  #5f911e 0%,#74af2f 98%);
+      background: linear-gradient(to bottom,  #5f911e 0%,#74af2f 98%);
+      filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5f911e', endColorstr='#74af2f',GradientType=0 );
+    }
+  }
 }
