--- a/app/assets/stylesheets/header.css.scss
+++ b/app/assets/stylesheets/header.css.scss
@@ -2,11 +2,11 @@
 
 #header {
   margin: 10px 0 0 0;
-  
+
   .main_container {
     position: relative;
   }
-  
+
   .header-telephone {
     position: absolute;
     right: 0;
@@ -17,7 +17,7 @@
 
 #header form {
   padding-top: 20px;
-  
+
   input {
     width: auto;
     border: 1px solid #e1dcd2;
@@ -25,7 +25,7 @@
     -moz-border-radius: 3px;
     border-radius: 3px;
   }
-  
+
   input[type="search"] {
     width: 75%
   }
@@ -39,7 +39,7 @@
     float: left;
     margin: 0 1px 0 0;
   }
-  
+
   ul li a {
     background: image-url('/assets/nav.jpg') repeat-x;
     border: 1px solid #78b432;
@@ -52,25 +52,36 @@
     font-weight: bold;
     border-bottom-left-radius: 5px;
     border-bottom-right-radius: 5px;
+
+    &.red {
+      border: 1px solid #b43232;
+      background: image-url('/assets/red.gif') repeat-x;
+    }
   }
-  
+
   ul li a:hover {
-    background: image-url('/assets/nav-bg-hover.gif') repeat-x; 
+    background: image-url('/assets/nav-bg-hover.gif') repeat-x;
+    &.red {
+      background: image-url('/assets/red-hover.gif') repeat-x;
+    }
   }
-  
+
   ul li a.active {
     background: image-url('/assets/nav-active.jpg') repeat-x;
+    &.red {
+      background: image-url('/assets/red-active.gif') repeat-x;
+    }
   }
 }
 
 #nav {
   margin-top: 22px;
   *margin-top: 24px;
-  
+
   &:not(#ie7or8) {
     margin-top: 11px;
   }
-  
+
   ul li.right {
     float: right;
   }
@@ -85,7 +96,7 @@
     border-color: #146982;
     background: image-url('/assets/blue-button.jpg') repeat-x;
   }
-  
+
   ul li a:hover {
     background: image-url('/assets/blue-button-hover.jpg') repeat-x;
   }
