--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -20,7 +20,7 @@
     <% end %>
 
     <% unless SITE_SETTINGS["Leeds Phone"].blank? %>
-      <div class="contact">Tel: <span class="calltracks_physiotherapyinleedscouk-main"><%= SITE_SETTINGS["Leeds Phone"] %></span></div>
+      <div class="contact">Tel: <%= calltracks(class: 'calltracks-telephone') %></div>
     <% end %>
 
     <% unless SITE_SETTINGS["Leeds Fax"].blank? %>
@@ -36,9 +36,8 @@
     <% flash.each do |name, msg| %>
       <%= content_tag :div, msg, id: "flash_#{name}" %>
     <% end %>
-    
+
     <%= render "form" %>
   </div>
   <div class="clear"></div>
 </div>
-
