--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,8 @@
 
     <% unless SITE_SETTINGS["Leeds Phone"].blank? %>
       <div class="header-telephone">
-        <%= image_tag "phone.png", alt: "Phone" %> <strong><span class="calltracks_physiotherapyinleedscouk-main"><%= SITE_SETTINGS["Leeds Phone"] %></span></strong>
+        <%= image_tag "phone.png", alt: "Phone" %>
+        <strong><%= calltracks(class: 'calltracks-telephone') %></strong>
       </div>
     <% end %>
   </div>
@@ -36,7 +37,7 @@
 
             <p>
               <% unless SITE_SETTINGS["Leeds Phone"].blank? %>
-                T: <strong><span class="calltracks_physiotherapyinleedscouk-main"><%= SITE_SETTINGS["Leeds Phone"] %></span></strong><br />
+                T: <strong><%= calltracks(class: 'calltracks-telephone') %></strong><br />
               <% end %>
 
               <% unless SITE_SETTINGS["Leeds Fax"].blank? %>
