Add Cyber Essentials logo

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -48,6 +48,9 @@
 
   <ul class="footer-right right">
     <li>
+      <%= image_tag 'footer/cyber-essentials.png', alt: 'Cyber Essentials' %>
+    </li>
+    <li>
       <%= link_to image_tag("footer/b.jpg", :alt => "HCPC Registered"),
       "http://www.hpc-uk.org/", {:class => "ir b", :rel => "external", :target => "_blank"} %>
     </li>
